add imamges to components

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </div>
         <div class="portfolio-grid">
-            <div class="col2 portfolio-item">
+            <div class="col2 portfolio-item picture-1">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
@@ -176,7 +176,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col portfolio-item">
+            <div class="col portfolio-item picture-2">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
@@ -192,7 +192,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col2 portfolio-item">
+            <div class="col2 portfolio-item picture-3">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
@@ -208,7 +208,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col portfolio-item">
+            <div class="col portfolio-item picture-4">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
@@ -224,7 +224,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col2 portfolio-item">
+            <div class="col2 portfolio-item picture-5">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
@@ -240,7 +240,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col portfolio-item">
+            <div class="col portfolio-item picture-6">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
@@ -256,7 +256,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col portfolio-item">
+            <div class="col portfolio-item picture-7">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
@@ -272,7 +272,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col hidden-col portfolio-item">
+            <div class="col hidden-col portfolio-item picture-8">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
@@ -288,7 +288,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col hidden-col portfolio-item">
+            <div class="col hidden-col portfolio-item picture-9">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
@@ -304,7 +304,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col2 portfolio-item hidden-col2">
+            <div class="col2 portfolio-item hidden-col2 picture-10">
                 <div class="project-info">
                     <div class="project-contact">
                         <a href="#" class="project-see-more project-url">
