--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div><i class="fa fa-angle-right"></i></div>
         </div>
     </div>
-    <!-- <div class="component3">
+    <div class="component3">
         <div class="header">
             <div>WHO <span>WE ARE</span></div>
             <div class="logo">
@@ -74,7 +74,7 @@
                 <div class="sub-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vel leo a consequat. In hendrerit consectetur vestibulum. Ut pulvinar, urna non sodales lobortis, est eros iacul elit, a venenatis purus nibh rutrum diam.</div>
                 <div class="grid">
                     <div class="flex-box">
-                        <div class="icon-back"><i class=" fa fa-cog"></i></div>
+                        <div class="icon-back"><i class=" fa fa-cog icons"></i></div>
                         <div class="text-wrapp">
                             <p class="paragraph-1">FEATURES ONE</p>
                             <p class="paragraph-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -82,7 +82,7 @@
                     </div>
                     <div>
                         <div class="flex-box">
-                            <div class="icon-back"><i class=" fa fa-cog"></i></div>
+                            <div class="icon-back"><i class="fa fa-map-marker icons"></i></div>
                             <div class="text-wrapp">
                                 <p class="paragraph-1">FEATURES ONE</p>
                                 <p class="paragraph-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -91,7 +91,7 @@
                     </div>
                     <div>
                         <div class="flex-box">
-                            <div class="icon-back"><i class=" fa fa-cog"></i></div>
+                            <div class="icon-back"><i class="fa fa-heart icons"></i></div>
                             <div class="text-wrapp">
                                 <p class="paragraph-1">FEATURES ONE</p>
                                 <p class="paragraph-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -100,7 +100,7 @@
                     </div>
                     <div>
                         <div class="flex-box">
-                            <div class="icon-back"><i class=" fa fa-cog"></i></div>
+                            <div class="icon-back"><i class=" fa fa-pencil-square-o icons"></i></div>
                             <div class="text-wrapp">
                                 <p class="paragraph-1">FEATURES ONE</p>
                                 <p class="paragraph-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -110,7 +110,10 @@
                 </div>
             </div>
         </div>
-    </div> -->
+        <div class="main-cont2">
+               <div class="black-box"></div>
+        </div>
+    </div> 
     <div class="component4">
         <div class="services-wrapper">
             <div class="services">SERVICES</div>
@@ -163,11 +166,20 @@
             <div class="col2 portfolio-item picture-1">
                 <div class="project-info">
                     <div class="project-contact">
-                        <a href="#" class="project-see-more project-url">
+                        <a href="#" class="project-see-more project-url hidden">
                             <i class="fa fa-eye" aria-hidden="true"></i>
                         </a>
-                        <a href="#" class="project-site project-url">
+                        <a href="#" class="project-site project-url hidden">
                             <i class="fa fa-link" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1 hidden-wrapp">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1 hidden-wrapp">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1 hidden-wrapp">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
                     </div>
                     <div class="project-content">
@@ -195,11 +207,20 @@
             <div class="col2 portfolio-item picture-3">
                 <div class="project-info">
                     <div class="project-contact">
-                        <a href="#" class="project-see-more project-url">
+                        <a href="#" class="project-see-more project-url hidden">
                             <i class="fa fa-eye" aria-hidden="true"></i>
                         </a>
-                        <a href="#" class="project-site project-url">
+                        <a href="#" class="project-site project-url hidden">
                             <i class="fa fa-link" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1 hidden-wrapp">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1 hidden-wrapp">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1 hidden-wrapp">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
                     </div>
                     <div class="project-content">
@@ -227,11 +248,20 @@
             <div class="col2 portfolio-item picture-5">
                 <div class="project-info">
                     <div class="project-contact">
-                        <a href="#" class="project-see-more project-url">
+                        <a href="#" class="project-see-more project-url hidden">
                             <i class="fa fa-eye" aria-hidden="true"></i>
                         </a>
-                        <a href="#" class="project-site project-url">
+                        <a href="#" class="project-site project-url hidden">
                             <i class="fa fa-link" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1 hidden-wrapp">
+                            <i class="fa fa-facebook hidden-wrapp" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1 hidden-wrapp">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1 hidden-wrapp">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
                     </div>
                     <div class="project-content">
@@ -307,11 +337,14 @@
             <div class="col2 portfolio-item hidden-col2 picture-10">
                 <div class="project-info">
                     <div class="project-contact">
-                        <a href="#" class="project-see-more project-url">
-                            <i class="fa fa-eye" aria-hidden="true"></i>
+                        <a href="#" class="project-url1">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
-                        <a href="#" class="project-site project-url">
-                            <i class="fa fa-link" aria-hidden="true"></i>
+                        <a href="#" class="project-url1">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="project-url1">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
                     </div>
                     <div class="project-content">
@@ -322,7 +355,7 @@
             </div>
         </div>
     </div>
-    <!-- <div class="component6">
+    <div class="component6">
         <div class="header-wrapper">
             <div class="portfolio">CONTACT</div>
             <div class="flex-service">
@@ -337,22 +370,22 @@
                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                 </div>
 
-                <h5>Lorem Ipsum is simply dummy</h5>
-                <p>united state</p>
+                <h5>129 LV High Street,</h5>
+                <p>United State</p>
             </div>
             <div class="email">
                 <div class="icon">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
-                <h5>555 555 555</h5>
-                <p>test@gmail.com</p>
+                <h5>+01 123-4567-8910</h5>
+                <p>youremail.co</p>
             </div>
-            <div class="email">
+            <div class="support">
                 <div class="icon">
                     <i class="fa fa-handshake-o" aria-hidden="true"></i>
                 </div>
 
-                <h5>Take Uur support</h5>
+                <h5>Take Our support</h5>
                 <p>test@gmail.com</p>
             </div>
         </div>
@@ -363,12 +396,13 @@
                 <input placeholder="Email" name="Email" />
             </div>
             <input placeholder="Subject" name="Subject" />
-            <input placeholder="Message" name="Message" />
+            <textarea placeholder="Message"  name="Message" id="Message"></textarea>
+            <!-- <input placeholder="Message" name="Message" /> -->
             <div class="submit-btn">
                 <button>Send Message</button>
             </div>
         </form>
-    </div> -->
+    </div>
     <footer class="component7">
         <img  src="images/component7/icon.jpg"/>
         <div class="social-icons">
